--- a/2-Modules/3-NPM Module and npm workflow/package.json
+++ b/2-Modules/3-NPM Module and npm workflow/package.json
@@ -24,10 +24,10 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3",
-    "moment": "^2.29.3"
+    "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "moment": "^2.29.3"
   }
 }
