--- a/5-Component/7-Styling/myapp/package.json
+++ b/5-Component/7-Styling/myapp/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-lorem-ipsum": "^1.4.10",
     "react-scripts": "5.0.1",
     "sass": "^1.52.1",
     "web-vitals": "^2.1.4"
