--- a/5-Component/7-Styling/myapp/package.json
+++ b/5-Component/7-Styling/myapp/package.json
@@ -10,10 +10,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-lorem-ipsum": "^1.4.10",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.0.2",
     "sass": "^1.52.1",
     "web-vitals": "^2.1.4"
   },
